# nomad

./: .gitignore  CMakeLists.txt  README.md  convert_csr.py  nomad.hpp  nomad_body.hpp  nomad_double.cpp  nomad_float.cpp  nomad_option.hpp  parameters.txt  permute.cpp  pool.hpp  realdata_body.hpp  runNomad.sh  synthgen.cpp
CMake/FindTBB/: FindTBB.cmake
experiments/: generate_scripts_nomad.py
experiments/PCCD/50/: netflix-1-1.cmd
experiments/PNOMAD/100/: netflix-1-1.cmd  netflix-1-16.cmd  netflix-1-4.cmd  netflix-1-8.cmd  netflix-100-1-1.cmd  netflix-100-1-16.cmd  netflix-100-1-4.cmd  netflix-100-1-8.cmd  yahoo-1-1.cmd  yahoo-1-16.cmd  yahoo-1-4.cmd  yahoo-1-8.cmd  yahoo-100-1-1.cmd  yahoo-100-1-16.cmd  yahoo-100-1-4.cmd  yahoo-100-1-8.cmd
experiments/PNOMAD/50/: netflix-1-1.cmd  netflix-1-16.cmd  netflix-1-4.cmd  netflix-1-8.cmd  netflix-50-1-1.cmd  netflix-50-1-16.cmd  netflix-50-1-4.cmd  netflix-50-1-8.cmd  yahoo-1-1.cmd  yahoo-1-16.cmd  yahoo-1-4.cmd  yahoo-1-8.cmd  yahoo-50-1-1.cmd  yahoo-50-1-16.cmd  yahoo-50-1-4.cmd  yahoo-50-1-8.cmd
